<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!--main-->
    <string name="app_name">Movie Releases</string>
    <string name="title_activity_detail">@string/details</string>
    <string name="title_activity_settings">@string/settings</string>
    <string name="action_settings">@string/settings</string>
    <string name="action_share">Share</string>

    <!-- movie type -->
    <string name="action_adventure_type">Action &amp; Adventure</string>
    <string name="animation_type">Animation</string>
    <string name="comedy_type">Comedy</string>
    <string name="terror_type">Terror</string>

    <!--formatter-->
    <string name="format_duration"><xliff:g id="minute">%d</xliff:g> minutes</string>
    <string name="format_notification">There are <xliff:g id="count">%d</xliff:g> new movies</string>
    <string name="format_shared">Title: <xliff:g id="title">%s</xliff:g>
        - Date release: <xliff:g id="date">%s</xliff:g>
        - Duration: <xliff:g id="duration">%d</xliff:g>
    </string>

    <!--global-->
    <string name="details">Details</string>
    <string name="settings">Settings</string>

    <!--Sync interval's-->
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="fortnightly">Fortnightly</string>
    <string name="monthly">Monthly</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">moviereleases.gperez88.com</string>
    <string name="content_authority">com.gperez88.moviereleases.app</string>

    <!--setting-->
    <string name="pref_sync_notification_category_label">Sync and Notification Data</string>

    <!-- Strings related to Sync preference-->
    <string name="pref_sync_interval_key" translatable="false">pref_sync_interval_key</string>
    <string name="pref_sync_interval_label" translatable="false">Sync Interval Data</string>
    <string name="pref_sync_interval_default_value" translatable="false">86400</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Movie Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>
