<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_sync_notification_category_label">
        <ListPreference
            android:key="@string/pref_sync_interval_key"
            android:title="@string/pref_sync_interval_label"
            android:entries="@array/pref_sync_interval_options"
            android:entryValues="@array/pref_sync_interval_values"
            android:defaultValue="@string/pref_sync_interval_default_value" />

        <CheckBoxPreference
            android:title="@string/pref_enable_notifications_label"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default" />

    </PreferenceCategory>
</PreferenceScreen>
